was missing semicolon

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -54,7 +54,7 @@ article > h2 {
 }
 .max_guest p {
     margin: auto;
-    text-align: center
+    text-align: center;
 }
 .number_rooms p {
     margin: auto;
