--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -31,7 +31,7 @@
 }
 .locations:hover .popover{
     display: block;
-    transform: translate(-14%, 5%);
+    transform: translate(-14%, 4%);
     padding-bottom: 20px;
     position: relative;
     z-index: 1;
@@ -52,8 +52,10 @@
     list-style-type: none;
     padding: 5px;
 }
-.filters .popover h2 {
+.filters h2 {
     font-size: 16px;
+    padding-left: 0;
+    margin-left: -20px;
 }
 .filters h3 {
     font-weight: 600;
